public/Views/ProfileView/ProfileView.scss
.profile {
    width: 100%;
    display: flex;
    flex-direction: column;
    position: relative;
}

.profile_edit {
    margin-bottom: 44px;
}

.cover {
    width: 100%;
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-radius: 12px;
    height: 256px;
}

.cover_edit {
    height: 156px;
}

.cover__img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.profile__content {
    display: flex;
    flex-direction: row;
    height: 56px;
    padding: 16px 0 0 190px;
    box-sizing: content-box;
    justify-content: space-between;
}

.profile__info {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.profile__name {
    font-weight: var(--font-weight-bold);
    font-size: var(--font-size-xl);
    line-height: var(--line-height-m);
    color: var(--text-primary);
}

.profile__avatar {
    border-radius: 50%;
    position: absolute;
    bottom: 0;
    left: 20px;
    border: 4px solid var(--stroke-white);
}

.profile__actions {
    display: flex;
    align-items: flex-start;
    flex-direction: row;
    gap: 8px;
}

.profile__details {
    display: flex;
    flex-direction: row;
    gap: 32px;
}

.profile__detail {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 8px;

    font-weight: var(--font-weight-regular);
    font-size: var(--font-size-s);
    line-height: var(--line-height-m);
    color: var(--text-secondary);
}

.profile__detail-text {
    word-break: break-word;
}

.profile__icon {
    width: 16px;
    height: 16px;
}

.profile__friends {
    width: 100%;
    border: 1px solid var(--stroke-primary);
    border-radius: 12px;
    padding: 16px 20px;
    background: var(--background-white);
    display: flex;
    flex-direction: column;
    gap: 12px;
    font-weight: var(--font-weight-bold);
    font-size: var(--font-size-l);
    line-height: var(--line-height-m);
    color: var(--text-primary);
}

.profile__friends-header {
    display: flex;
    flex-direction: row;
    gap: 4px;
}

.profile__friends-count {
    color: var(--text-secondary);
}

.profile__friends-inner {
    display: flex;
    flex-wrap: wrap;
    gap: 12px;
    column-gap: 20px;
    justify-content: space-evenly;
}

.profile__friend {
    display: flex;
    flex-direction: column;
    gap: 4px;
    width: 64px;
    align-items: center;

    font-weight: var(--font-weight-regular);
    font-size: var(--font-size-xs);
    line-height: var(--line-height-m);
    color: var(--text-primary);
    word-break: break-word;
    text-align: center;
}

.profile__detail_more {
    cursor: pointer;

    transition: var(--trans-btn);
}

.profile__detail_more:hover {
    text-decoration: underline;
}

.profile__detail_more:active {
    text-decoration: underline;
    color: var(--text-secondary-hover);
}

